<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="title_map">Map</string>
    <string name="title_list_view">List View</string>
    <string name="search">Search</string>
    <string name="loan">Loan</string>

    <string name="add_property">Add property</string>
    <string name="sold">Sold </string>
    <string name="sold_the">Sold</string>
    <string name="creation">Created </string>
    <string name="on_sale">On sale </string>


    <string name="demo_property_type">Townhouse</string>
    <string name="demo_property_location">Draveil</string>
    <string name="demo_price">210 000 </string>
    <string name="demo_surface">84 </string>
    <string name="demo_property_not_sold">In Sale</string>
    <string name="demo_property_sold">Sold !</string>
    <string name="demo_property_street">3 avenue de la République</string>
    <string name="demo_property_city">Draveil</string>
    <string name="demo_property_room_text"> room(s)</string>
    <string name="demo_property_room">4 </string>
    <string name="demo_property_bedroom">2 </string>
    <string name="demo_property_bedroom_text"> bedroom(s)</string>
    <string name="demo_property_country">France</string>
    <string name="demo_property_postal_code">91210</string>
    <string name="demo_property_description">Belle maison de ville refaite à neuf. Aucun travaux à prévoir.</string>
    <string name="demo_property_seller">Thomas</string>
    <string name="demo_property_no"> - </string>
    <string name="demo_property_nearby_all"> Nearby everything !</string>


    <!-- LOAN FRAGMENT -->
    <string name="loan_simulator">Loan Simulator</string>
    <string name="loan_amount">Loan amount</string>
    <string name="down_payment">Down payment : </string>
    <string name="bring_payment">Financial contribution</string>
    <string name="loan_terms">Loan terms (years)</string>
    <string name="interest_rate">Interest rate (%)</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="annual_payment">Annual payment</string>
    <string name="interest_total_cost">Interest total cost : </string>
    <string name="calculate">Calculate</string>
    <string name="required_field">Required field</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- SEARCH FRAGMENT -->
    <string name="type">Type of good :</string>
    <string name="select_all">Select All</string>
    <string name="range_price">Price in $</string>
    <string name="number_of_rooms">Rooms</string>
    <string name="number_of_bedrooms">Bedrooms</string>
    <string name="surface">Surface in m2</string>
    <string name="m2">m2</string>
    <string name="nearby">Nearby</string>
    <string name="Other">Other</string>
    <string name="bus">Transportations</string>
    <string name="subway">Subway</string>
    <string name="parking">Parking</string>
    <string name="school">School</string>
    <string name="market">Markets</string>
    <string name="parks">Parks</string>
    <string name="flat">Flat</string>
    <string name="duplex">Duplex</string>
    <string name="house">House</string>
    <string name="townhouse">Townhouse</string>
    <string name="penthouse">Penthouse</string>
    <string name="rooms">Number of rooms</string>
    <string name="mini">Mini</string>
    <string name="max">Max</string>
    <string name="search_property">Search</string>
    <string name="with_picture">With pictures</string>


    <!-- ADD PROPERTY -->
    <string name="add_property_text">Add a new property</string>
    <string name="property_type">Type</string>
    <string name="property_price">Price</string>
    <string name="property_rooms">Number of room</string>
    <string name="managed_by">Managed by :</string>
    <string name="title_activity_map_fragment">MapFragment</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="city">Ville</string>
    <string name="contry">Pays</string>
    <string name="add_from_camera">Add from camera</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="postal_code">Code Postal</string>
    <string name="select_pictures">Select pictures</string>
    <string name="Choose_picture_cover">Choose the cover picture !</string>
    <string name="property_added">Property added !</string>

    <!-- Autocomplete type -->
    <string-array name="type_array">
        <item>House</item>
        <item>Flat</item>
        <item>Duplex</item>
        <item>Penthouse</item>
    </string-array>

    <!-- Autocomplete seller -->
    <string-array name="seller_array">
        <item>Charlotte</item>
        <item>David</item>
        <item>Sylvain</item>
        <item>Christelle</item>
    </string-array>

    <!-- seller -->
        <string name="charlotte">Charlotte</string>
        <string name="david">David</string>
        <string name="sylvain">Sylvain</string>
        <string name="christelle">Christelle</string>


    <!-- PROPERTY DETAILS -->
    <string name="details_property_type">Type of good :</string>
    <string name="details_property_price">Price :</string>
    <string name="details_property_surface">Surface :</string>
    <string name="details_property_dollar"> $</string>
    <string name="details_property_euro"> $</string>
    <string name="details_property_meters"> m2</string>
    <string name="details_property_rooms">Number of rooms :</string>
    <string name="details_property_bedrooms">Number of bedrooms :</string>
    <string name="details_managed_by">Sold by :</string>
    <string name="details_description">Description :</string>
    <string name="details_location">Address :</string>
    <string name="details_city">City :</string>
    <string name="details_country">Country :</string>
    <string name="details_postal_code">Postal Code :</string>
    <string name="details_from_camera">Photos :</string>
    <string name="details_property_school">School :</string>
    <string name="details_property_parks">Parks :</string>
    <string name="details_property_parkings">Parkings :</string>
    <string name="details_property_market">Markets :</string>
    <string name="details_property_transportations">Transportations :</string>
    <string name="details_property_status">Status :</string>
    <string name="details_property_sold">Sold !</string>
    <string name="details_property_not_sold">In Sale</string>
    <string name="details_property_back_button">Back</string>
    <string name="details_property_modify_button">Modify</string>
    <string name="delete_property">Delete</string>
    <string name="save">Save</string>
    <string name="detail_saved">Details saved</string>


</resources>
