<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_loan">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loan_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        app:title="@string/loan_simulator"
        app:titleTextColor="@color/white"
        android:layout_marginBottom="@dimen/cardview_default_radius"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loan_toolbar"
        android:layout_margin="16dp"
        android:id="@+id/cardview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loan_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16sp"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/money">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loan_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/loan_amount" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bring_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16sp"
                app:layout_constraintTop_toBottomOf="@id/loan_amount_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/money">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bring_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loan_amount_layout"
                    android:hint="@string/bring_payment" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loan_terms_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bring_amount_layout"
                android:hint="@string/loan_terms"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:paddingBottom="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loan_terms"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loan_amount_layout"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/interest_rate_layout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bring_amount_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/interest_rate"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/interest_rate"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/interest_text"
        app:layout_constraintTop_toBottomOf="@id/cardview"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/interest_total_cost"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/interest_total_cost_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/interest_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/interest_text"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/down_payment_text"
        app:layout_constraintTop_toBottomOf="@id/interest_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/down_payment"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/down_payment_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/interest_total_cost_layout"
        app:layout_constraintBottom_toBottomOf="@id/down_payment_text"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/annual_text"
        app:layout_constraintTop_toBottomOf="@id/down_payment_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/annual_payment"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/annual_payment_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/interest_total_cost_layout"
        app:layout_constraintBottom_toBottomOf="@id/annual_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/monthly_payment_text"
        app:layout_constraintTop_toBottomOf="@id/annual_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/monthly_payment"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/monthly_payment_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/interest_total_cost_layout"
        app:layout_constraintBottom_toBottomOf="@id/monthly_payment_text"/>


    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/down_payment_layout"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>