<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/property_constraint_layout"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="20dp"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="5dp"
            android:id="@+id/property_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/property_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/house_picture"
                android:background="@color/black"
                android:contentDescription="property_picture"
                tools:ignore="HardcodedText"
                android:scaleType="centerCrop"
                />

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/property_style"
            app:layout_constraintStart_toEndOf="@+id/property_card_view"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="@+id/property_card_view"
            android:text="@string/demo_property_type"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/property_location"
            app:layout_constraintTop_toBottomOf="@+id/property_style"
            android:text="@string/demo_property_location"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/property_card_view"
            app:layout_constraintStart_toStartOf="@+id/property_style"
            android:textColor="@color/light_grey"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/property_price"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/property_card_view"
            app:layout_constraintBottom_toBottomOf="@+id/property_card_view"
            android:text="@string/demo_price"
            android:textColor="@color/blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/property_currency"
                app:layout_constraintStart_toEndOf="@+id/property_price"
                app:layout_constraintBottom_toBottomOf="@+id/property_price"
                app:layout_constraintTop_toTopOf="@id/property_price"
                android:text="@string/details_property_euro"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/is_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sold"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/property_price"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/delete"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/delete"
                android:src="@drawable/ic_baseline_delete_24"
                android:layout_marginHorizontal="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>